<resources>
    <string name="app_name">DarkWithLegacy</string>
    <string name="mode">Day</string>
    <string name="target_string">string.xml:</string>
    <string name="target_theme">theme.xml:</string>
    <string name="action_open_dialog">Open dialog!</string>
    <string name="target_resource">resource:</string>
    <string name="action_open_alert">Open alert!</string>
    <string name="action_ok">ok</string>
    <string name="action_open_web">Open web!</string>
</resources>